--- a/hyundroid/templates/hyundroid/post_list.html
+++ b/hyundroid/templates/hyundroid/post_list.html
@@ -8,17 +8,13 @@
       <h1><a href="">Hyundroid's Blog</a></h1>
     </div>
 
-    <div>
-      <p>published : 2017.05.21, 18:43</p>
-      <h2><a href="">My First post</a></h2>
-      <p>First, Hi there!!</p>
-    </div>
-
-    <div>
-      <p>published : 2017.05.21, 18:43</p>
-      <h2><a href="">My Second post</a></h2>
-      <p>Second, Hi there!!</p>
-    </div>
+    {% for post in posts %}
+      <div>      
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text | linebreaksbr }}</p>
+        <p>published : {{ post.published_date }}</p>
+      </div>
+    {% endfor %}
 
   </body>
 </html>
